--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/p5.min.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/p5.dom.min.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/p5.sound.min.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/p5.collide2d.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Hawk1401/Racing_Ai/master/style.css" />
+    <script src="p5.min.js"></script>
+    <script src="p5.dom.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="p5.collide2d.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8" />
   </head>
 
   <body>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/Track.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/Car.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/sketch.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/nn/ActivationFunction.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/nn/Matrix.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/nn/NN.js"></script>
-    <script src="https://raw.github.com/Hawk1401/Racing_Ai/master/ga.js"></script>
+    <script src="Track.js"></script>
+    <script src="Car.js"></script>
+    <script src="sketch.js"></script>
+    <script src="nn/ActivationFunction.js"></script>
+    <script src="nn/Matrix.js"></script>
+    <script src="nn/NN.js"></script>
+    <script src="ga.js"></script>
   </body>
 </html>
